--- a/index.html
+++ b/index.html
@@ -1,1 +1,119 @@
-first
+<!DOCTYPE html>
+<html>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<meta name="description" content="Neslihan Turan's - Simplistic Web Personal Page" />
+	<title>Neslihan Turan</title>
+	<style type="text/css" media="screen">
+		body { font-family:helvetica; }
+		h1 { padding:0; margin:30px 0 0 0; font-size:32px; }
+		h1 + span { font-size:14px; color:#777; font-style:italic; }
+		span.date { font-style:italic; font-size:12px; color:#444; clear:both; float:left; display:block; width:100%; }
+		span.date + span { padding:15px; margin:0 0 15px 0; overflow:hidden; display:block; float:left; }
+		
+		span.code { display:block; clear:both; padding:5px 5px 5px 20px; font-family:Courier; font-size:11px; font-weight:bold; color:#334; }
+		span.optional { opacity:0.6; }
+		span.optional:hover { opacity:1; }
+		
+		span.information { display:block; clear:both; padding:5px 5px 5px 20px; font-style: italic; font-size:11px; color:#888; }
+		p.info { margin:10px 5px 15px 20px;}
+		a { color:#00e; }
+		
+		body.dark { color:#fff; background-color:#000; }
+		a.dark { color:#fb0000; }
+		a.dark:visited { color:#9b0606; }
+	</style>
+</head>
+<body>
+	<h1>Neslihan Turan</h1>
+	<span>simplistic web page</span>
+	<br />
+	<p>
+		I am Neslihan Turan, final year graduate student in Marmara University, Computer Science Engineering department.<br />
+	    I am an enthusiastic learner in CS. For more than two years, I am a free software activist and a GNU lover. This <br />
+	    philosophy is one part of my world view. I also works on Internet freedom, decentralization of information, <br />
+	    movements against censorship etc.
+	</p>
+	
+	<strong>github:</strong> <a href="https://github.com/neslihanturan">neslihanturan</a><br />
+	<strong>twitter:</strong> <a href="https://twitter.com/neslihannturan">@neslihannturan</a><br />
+	<strong>cv</strong> <a href="#">here</a><br />
+<p>
+  <script>
+/*
+*This script is released to the public domain.
+*/
+  </script>
+  <script>
+    dark_theme = false;
+    function toggle_dark_theme() {
+        dark_theme = !dark_theme;
+
+        links = document.getElementsByTagName('a');
+
+        if(dark_theme) {
+            document.body.className = "dark";
+            for(i = 0; i < links.length; i ++) {
+	        links[i].className = "dark";
+	    }
+	} else {
+	    document.body.className = "light";
+	    for(i = 0; i < links.length; i ++) {
+	        links[i].className = "light";
+	    }
+	}
+    }
+  </script>
+<pre><a href="#" onclick="toggle_dark_theme()">Toggle: Dark Theme</a></pre>
+</p>
+
+	<h2>Familiar Technologies</h2>
+	<p>
+	 During my education period, I experienced several technologies and programming languages. Such as, Java, Pyhton, C.<br />
+	 I am mostly comfortable with Java and Android Development. Additionally, I have some experiences with SQL, Python and<br /> Django
+	 framework. Other than programming languages, I am quite comfortable with command line interface, git etc.</p>
+
+	<h2>Past Experiences</h2>
+	<strong><b>Java Student Assistant</b></strong>
+	<span class="date">From 16 09 2013, To 16 09 2016</span>
+	<p class="info">
+	 I worked for 3 years, as student Assistant of Java class in Marmara University Computer<br />
+	 Science Department. This position includes responsibility of giving a lecture for Java programming<br />
+	 practice 4 hours per week. </p>
+	
+	<strong><b>Internship at Institute Industrial IT (inIT) of the Ostwestfalen-Lippe University, Germany</b></strong>
+	<span class="date">From 01 08 2014, To 04.09.2014</span>
+	<p class="info">
+	 I had an internship at inIT of the OWL university in Germany. The internship took 40 days, and I worked on <br />
+	 Android platform. Project requirement was rendering Collada 3D file format in android devices.</p>
+	 
+	<h2>Communities and Associations</h2>
+	<p>
+	 I have a network that is composed from free software and Internet activists. Here are some of associations or communities<br/>
+	 that I am related to.</p>
+	  <ul>
+		  <li><a href="https://istanbulhs.org/wiki/">İstanbul HackerSpace </a></li>
+		  <li><a href="https://twitter.com/gnumarmara">MarmaraGNU</a></li>
+		  <li><a href="https://alternatifbilisim.org/">Alternatif Bilişim Derneği</a></li>
+	  </ul> 
+	 	
+	<h2>Code</h2>
+			<strong><b>code:</b></strong><br />
+					&nbsp; - <a href="https://github.com/neslihanturan/AudioStream">AudioStream</a>
+		&nbsp; &nbsp; &nbsp; <span class="information"> Throw away prototype for WikiRadio project</span>
+					&nbsp; - <a href="https://github.com/neslihanturan/Elephanote">Elephanote</a>
+		&nbsp; &nbsp; &nbsp; <span class="information"> An android application to simplify copy paste property. Written in 2015</span>
+					&nbsp; - <a href="https://github.com/neslihanturan/AndroidColladaLoader">AndroidColladaLoader</a>
+		&nbsp; &nbsp; &nbsp; <span class="information">Collada 3D format loader for android. Written at 2014</span>
+
+	
+	<h2>Other Interests</h2>
+	<p>I am interested as robotics as an amateur.</p>
+	<br />	
+	<br/>
+	<br/>
+
+</body>
+</html>
+
+
