--- a/index.html
+++ b/index.html
@@ -106,9 +106,19 @@
 					&nbsp; - <a href="https://github.com/neslihanturan/AndroidColladaLoader">AndroidColladaLoader</a>
 		&nbsp; &nbsp; &nbsp; <span class="information">Collada 3D format loader for android. Written at 2014</span>
 
-	
+	<h2>Foreign Languages</h2>
+	<ul>
+		<li>English - fluent</li>
+		<li>Spanish and French - beginner</li>
+		
 	<h2>Other Interests</h2>
-	<p>I am interested as robotics as an amateur.</p>
+	<ul>
+		<li>Making robots as an amateur.</li>
+		<li>Translating <a href="http://usrb.in/rfc1855.html">technical documents</a> or GNU related articles to Turkish </li>
+		<li>Researching about NLP, AI and neuroimaging studies </li>
+		<li>Learning languages</li>
+	</ul>
+	
 	<br />	
 	<br/>
 	<br/>
