--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 	  </ul> 
 	 	
 	<h2>Code</h2>
-			<strong><b>code:</b></strong><br />
+			<strong><b>Some Android Projects:</b></strong><br />
 					&nbsp; - <a href="https://github.com/neslihanturan/AudioStream">AudioStream</a>
 		&nbsp; &nbsp; &nbsp; <span class="information"> Throw away prototype for WikiRadio project</span>
 					&nbsp; - <a href="https://github.com/neslihanturan/Elephanote">Elephanote</a>
